--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
     "mongoose": "^6.6.5",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "node-schedule": "^2.1.0",
+    "nodemailer": "^6.8.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
