--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "mongoose": "^6.6.5",
     "morgan": "^1.10.0",
     "node-schedule": "^2.1.0",
-    "nodemailer": "^6.8.0"
+    "nodemailer": "^6.8.0",
+    "twilio": "^3.82.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
