--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
+    "moment": "^2.29.4",
+    "moment-timezone": "^0.5.37",
     "mongoose": "^6.6.5",
     "morgan": "^1.10.0",
     "node-schedule": "^2.1.0",
