--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
   "dependencies": {
     "colors": "^1.4.0",
     "dotenv": "^16.0.3",
+    "ejs": "^3.1.8",
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
+    "express-ejs-layouts": "^2.5.1",
     "moment": "^2.29.4",
     "moment-timezone": "^0.5.37",
     "mongoose": "^6.6.5",
